clusters/production/frigate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: frigate
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: "s3.malrusayni.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  number: 9000
  tls:
    - hosts:
        - "frigate.malrusayni.com"
      secretName: frigate-tls
